--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
     <section class="hero">
         <div class="container">
             <h1>🏔️ Trouve ton partenaire de cordée... et de vie</h1>
-            <p class="subtitle">Enfin une app de rencontre pour les VRAIS passionnés de rando, trail et montagne</p>
+            <p class="subtitle">Enfin une app de rencontre pour les VRAIS passionnés de , trail et montagne</p>
             <a href="#signup" class="cta-primary">Rejoindre la liste d'attente (gratuit)</a>
             <p class="signup-count">🔥 <strong id="counter">247</strong> passionnés déjà inscrits</p>
         </div>
@@ -381,7 +381,7 @@
             <div class="problem-grid">
                 <div class="problem-card">
                     <h3>❌ Sur Tinder</h3>
-                    <p>"J'aime la nature" = 1 rando en 2022 et des photos de son chat</p>
+                    <p>"J'aime la nature" = 1  en 2022 et des photos de son chat</p>
                 </div>
                 <div class="problem-card">
                     <h3>❌ Sur Bumble</h3>
@@ -413,7 +413,7 @@
                 <div class="feature-card">
                     <div class="feature-icon">📍</div>
                     <h3>Suggestions de dates</h3>
-                    <p>"Rando au Lac d'Annecy dimanche ?" - Spots intégrés</p>
+                    <p>" au Lac d'Annecy dimanche ?" - Spots intégrés</p>
                 </div>
                 <div class="feature-card">
                     <div class="feature-icon">🔒</div>
@@ -434,7 +434,7 @@
                     <p class="testimonial-author">— Marie, 32 ans, Grenoble</p>
                 </div>
                 <div class="testimonial">
-                    <p class="testimonial-text">"Si ça existait je supprime Tinder direct. Fini de perdre du temps avec des gens qui pensent que randonner = 30 min de marche."</p>
+                    <p class="testimonial-text">"Si ça existait je supprime Tinder direct. Fini de perdre du temps avec des gens qui pensent que nner = 30 min de marche."</p>
                     <p class="testimonial-author">— Thomas, 28 ans, Annecy</p>
                 </div>
                 <div class="testimonial">
@@ -475,7 +475,7 @@
                     </div>
                     
                     <div class="form-group">
-                        <label for="">Ton  en rando/trail *</label>
+                        <label for="">Ton niveau en rando/trail *</label>
                         <select id="niveau" required>
                             <option value="">-- Choisir --</option>
                             <option value="debutant">Débutant (sorties occasionnelles)</option>
@@ -816,6 +816,7 @@ window.formLoadTime = Date.now();
 </body>
 
 </html>
+
 
 
 
