--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Horizn - L'app de rencontre pour passionnés de montagne</title>
+    <link rel="icon" type="image/png" href="favicon.png">
+    <link rel="apple-touch-icon" href="favicon.png">
     <style>
         * {
             margin: 0;
@@ -367,6 +369,7 @@
     <!-- Hero Section -->
     <section class="hero">
         <div class="container">
+            <img src="logo.png" alt="Horizn Logo" style="max-width: 150px; margin-bottom: 20px; filter: drop-shadow(0 4px 6px rgba(0,0,0,0.1));">
             <h1>🏔️ Trouve ton partenaire de cordée... et de vie</h1>
             <p class="subtitle">Enfin une app de rencontre pour les VRAIS passionnés de , trail et montagne</p>
             <a href="#signup" class="cta-primary">Rejoindre la liste d'attente (gratuit)</a>
@@ -810,6 +813,7 @@
 </body>
 
 </html>
+
 
 
 
