--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
     <!-- Hero Section -->
     <section class="hero">
         <div class="container">
-            <img src="horizn-logo-512x512.png" alt="Horizn Logo" class="hero-logo">
+            <img src="Horizn rounded logo.png" alt="Horizn Logo" class="hero-logo">
             <h1>🏔️ Trouve ton partenaire de cordée... et de vie</h1>
             <p class="subtitle">Enfin une app de rencontre pour les VRAIS passionnés de , trail et montagne</p>
             <a href="#signup" class="cta-primary">Rejoindre la liste d'attente (gratuit)</a>
@@ -813,6 +813,7 @@
 </body>
 
 </html>
+
 
 
 
