--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
     <section class="hero">
         <div class="container">
             <img src="horizn-rounded.png" alt="Horizn Logo" class="hero-logo">
-            <h1>🏔️ Trouve ton partenaire de cordée... et de vie</h1>
+            <h1>Trouve ton partenaire de cordée... et de vie</h1>
             <p class="subtitle">Enfin une app de rencontre pour les VRAIS passionnés de , trail et montagne</p>
             <a href="#signup" class="cta-primary">Rejoindre la liste d'attente (gratuit)</a>
             <p class="signup-count">🔥 <strong id="counter">247</strong> passionnés déjà inscrits</p>
@@ -837,6 +837,7 @@
 </body>
 
 </html>
+
 
 
 
