--- a/index.html
+++ b/index.html
@@ -26,12 +26,13 @@
         
         /* Hero Section */
         .hero {
-            background: linear-gradient(135deg, rgba(102, 126, 234, 0.8) 0%, rgba(102, 126, 234, 0.8) 100%), url('horizn-background.jpg') center/cover no-repeat;
+            background: linear-gradient(135deg, rgba(200, 200, 200, 0.3) 0%, rgba(200, 200, 200, 0.3) 100%), url('horizn-background.jpg') center/cover no-repeat;
             color: white;
             padding: 80px 20px 100px;
             text-align: center;
             position: relative;
             overflow: hidden;
+            opacity: 0.75;
         }
         
         .hero::before {
@@ -841,6 +842,7 @@
 </body>
 
 </html>
+
 
 
 
